fixed url for calendar image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p>For restaurant location and food information. Go to <a href="food.html">Food</a></p>
                 </article>
                 <article class="column">
-                        <img src="calendar.jpeg"/>
+                        <img src="Calendar.jpeg"/>
                         <h2>Events</h2>
                         <p>For event information. Go to <a href="events.html">Events</a></p>
                 </article>
